external-crates/move/crates/move-compiler/tests/move_2024/naming/use_fun_with_builtin.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02017]: invalid 'use fun' declaration
  ┌─ tests/move_2024/naming/use_fun_with_builtin.move:2:5
  │
2 │     use fun freeze as vector.freeze;
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid 'use fun'. Cannot use a builtin function as a method
